# tkgoodstuff

./: .gitignore  CHANGES  Dialer  Dialer.README  INTERNATIONALIZATION  Makefile  Makefile.in  README  TIPS  TODO  config.cache  config.status  configure  configure.in  fvwm-patch-2.0.45  install.out  mktclindex  tkgoodstuff
doc/: FAQ  NOTICE  biff.html  chooser.html  clock.html  dialer.html  fvwm.html  ical.html  icons.html  index-orig.html  index.html  install.html  jots.html  load.html  mailinglists.html  menu.html  net.html  pager.html  popimap.html  preferences.html  running.html  screenshots.html  shots.html  tkgoodstuff.html  tkman.html  toc.html  watch.html  webster.html  windowlist.html  writingclients.html  www.html
icons/: biffgreen-sm.xpm  biffgreen.xpm  biffnew-sm.xpm  biffno-sm.xpm  biffno.xpm  biffred-sm.xpm  biffred.xpm  biffwhite-sm.xpm  biffwhite.xpm  biffyellow.xpm  blue_marble.xpm  browser.xpm  bullet.xpm  button.xpm  calc-sm.xpm  calc.xpm  client.xpm  copyright.info  dimple.xpm  editor.xpm  exec.xpm  file  filefull.xpm  filegone.xpm  filer.xpm  graphic.xpm  ical-sm.xpm  ical.xpm  iconic.xpm  jots-sm.xpm  jots.xpm  labelbox.xpm  lightblue_marble.xpm  mailer.xpm  manreader.xpm  menu.xpm  netdn-sm.xpm  netdn.xpm  netscape-sm.xpm  netscape.xpm  (+40 more)
libs/: Makefile  Makefile.in  README  README-tkFvwm  README-xpm  default.h  fvwmlib.h  notes  tixImgXpm.c  tkAppInit.c  tkFvwm.c  tkInt.h  tkPort.h  tkUnixPort.h  tkXAccess.c  tkg.c  tkg.h  tkgButton.c  tkgButton.h  tkgFrame.c  tkgUnixButton.c
misc/: MH-E  frame-mh-e.el  mh-e.README
sample-rc/: home  minimal  stacks  win95
tcl/: Alarm.tcl  Analog.tcl  Biff.tcl  BiffIMAP.tcl  BiffMH.tcl  Biffatime.tcl  Bifffilesize.tcl  Biffinternal.tcl  Biffscan.tcl  Calc.tcl  Chooser.tcl  Clock.tcl  Example.tcl  Fvwm.tcl  FvwmDebug.tcl  Help.tcl  Ical-fetch.tcl  Ical.tcl  Jots.tcl  Load.tcl  Markets.tcl  Menu.tcl  Net.tcl  Outside.tcl  Pager.tcl  PopImap.tcl  TkMan.tcl  WWW.tcl  Watch.tcl  WatchDog.tcl  Webster.tcl  WindowList.tcl  args.tcl  async.tcl  balloon.tcl  configcommands.tcl  defaults.tcl  dialogs.tcl  elements.tcl  english.tcl  (+28 more)
