dnl	This file is an input file used by the GNU "autoconf" program to
dnl	generate the file "configure", which is run to configure the
dnl	Makefile in this directory.

# Ensure we're in the correct directory
AC_INIT(tcl/Biff.tcl)

TCLTK_MAJORNEEDED=8
TCLTK_MINORNEEDED=0

# NOTE: If configure can't find your tclConfig.sh, add its directory here:
dirlist='/usr/local /usr'

if test -d $prefix
then
  dirlist=$prefix	
else
  dirlist="$dirlist `echo $PATH | sed -e 's/:/ /g' | sed -e 's/\/bin[\/]* / /g'`"
fi

abort () {
    echo
    echo "Aborting.  $*"
    echo
    exit
}

VERSION=${TCLTK_MAJORNEEDED}.${TCLTK_MINORNEEDED}

# Find appropriate tclConfig.sh and
# recover information that Tcl computed with its configure script.

TCLCONFIGSH=""
for prefix in $dirlist; do
  if test -f $prefix/lib/tclConfig.sh; then
    TCLCONFIGSH=$prefix/lib/tclConfig.sh
    . $TCLCONFIGSH
    if test `expr \( $TCL_MAJOR_VERSION \< $TCLTK_MAJORNEEDED \) \| \( $TCL_MINOR_VERSION \< $TCLTK_MINORNEEDED \)` = 0
    then
      break
    fi
  fi
done
test -f "$TCLCONFIGSH" || abort "Can't find any tclConfig.sh"
if test `expr \( $TCL_MAJOR_VERSION \< $TCLTK_MAJORNEEDED \) \| \( $TCL_MINOR_VERSION \< $TCLTK_MINORNEEDED \)` = 1
then 
  abort "Need but can't find tclConfig.sh for Tcl ${TCLTK_MAJORNEEDED}.${TCLTK_MINORNEEDED} or later."
fi
echo "using $TCLCONFIGSH"

TKCONFIGSH=${prefix}/lib/tkConfig.sh
test -f "$TKCONFIGSH" || abort "Can't find any tkConfig.sh"
. $TKCONFIGSH
if test `expr \( $TK_MAJOR_VERSION \< $TCLTK_MAJORNEEDED \) \| \( $TK_MINOR_VERSION \< $TCLTK_MINORNEEDED \)` = 1
   then abort "Need but can't find tkConfig.sh for Tk ${TCLTK_MAJORNEEDED}.${TCLTK_MINORNEEDED} or later."
fi
echo "using $TKCONFIGSH"

AC_PATH_PROG(TCLSH,tclsh$TCL_VERSION,"")
if test -z "$TCLSH"
   then abort "Is tcl${TCLTK_MAJORNEEDED}.$TCLTK_MINORNEEDED or later installed? (Cannot find appropriate tclsh.)"
fi
AC_PATH_PROG(WISH,wish$TK_VERSION,"")
if test -z "$WISH" 
   then abort "Is tk${TCLTK_MAJORNEEDED}.$TCLTK_MINORNEEDED or later installed? (Cannot find appropriate wish.)"
fi

TKG_LANGUAGE=english
AC_ARG_ENABLE(french,"",TKG_LANGUAGE=french)

AC_PROG_INSTALL

AC_SUBST(INSTALL)
AC_SUBST(INSTALL_PROGRAM)
AC_SUBST(INSTALL_DATA)
AC_SUBST(VERSION)
AC_SUBST(TKG_LIBRARY)
AC_SUBST(TKG_LANGUAGE)
AC_SUBST(TCL_CC)
AC_SUBST(TCL_DEFS)
AC_SUBST(TCL_PREFIX)
AC_SUBST(TCL_LD_FLAGS)
AC_SUBST(TCL_LD_SEARCH_FLAGS)
AC_SUBST(TCL_LIBS)
AC_SUBST(TCL_LIB_SPEC)
AC_SUBST(TK_PREFIX)
AC_SUBST(TK_EXEC_PREFIX)
AC_SUBST(TK_DEFS)
AC_SUBST(TK_LIB_SPEC)
AC_SUBST(TK_BUILD_LIB_SPEC)
AC_SUBST(TK_LIBS)
AC_SUBST(TK_XINCLUDES)
AC_SUBST(TK_XLIBSW)
AC_SUBST(TCLSH)
AC_SUBST(EXECSHELL)

AC_OUTPUT(Makefile libs/Makefile)
